--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -822,6 +822,20 @@ config HTC_PWRSINK
 	default y
 	bool "HTC Power Sink Driver"
 
+-config QSD_SVS
+	bool "QSD Static Voltage Scaling"
+	depends on (ARCH_MSM_SCORPION)
+	default y
+	help
+	  Enables static voltage scaling using the TPS65023 PMIC.
+
+config QSD_PMIC_DEFAULT_DCDC1
+	int "PMIC default output voltage"
+	depends on (ARCH_MSM_SCORPION)
+	default 1275
+	help
+	  This is the PMIC voltage at Linux kernel boot.
+
 config MSM_SPM
 	bool "Subsystem Power Manager"
 	depends on ARCH_MSM7X30
@@ -1738,6 +1752,15 @@ config AXI_SCREEN_POLICY
 	help
 		Simple AXI scaling based on screen ON/OFF and PWRC.
 
+config MSM_CPU_AVS
+	bool "Enable Adaptive Voltage Scaling (AVS)"
+	depends on (ARCH_MSM_SCORPION && QSD_SVS)
+	default y
+	help
+	This enables the Adaptive Voltage Scaling feature of
+	Qualcomm ARMv7 CPUs. It adjusts the voltage for each frequency
+	based on feedback from three ring oscillators in the CPU.
+
 config MSM_PIL
 	bool "Peripheral image loading"
 	select FW_LOADER
@@ -2045,3 +2068,4 @@ config HTC_BATT_ALARM
 	default n
 	help
 	  Enable 3.0V triggeer level 0 shutdown rule
+
