--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,9 @@ modules.builtin
 include/config
 include/linux/version.h
 include/generated
+arch/arm/boot/compressed/lib1funcs.S
+arch/arm/boot/compressed/vmlinux
+#
 
 # stgit generated dirs
 patches-*
